fix person contacts alignments on mobile

--- a/assets/sass/_theme/blocks/persons.sass
+++ b/assets/sass/_theme/blocks/persons.sass
@@ -68,6 +68,8 @@
             @include media-breakpoint-down(desktop)
                 .contacts-details
                     margin-top: $spacing-3
+                    span
+                        flex-shrink: 0
                     a, address
                         text-align: right
             @include media-breakpoint-up(desktop)
